--- a/citation-booster.html
+++ b/citation-booster.html
@@ -100,9 +100,7 @@
                             <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Pricing</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
@@ -221,7 +219,7 @@
                         </div>
                         <div class="col-md-4 col-12">
                             <a target="_blank" href="./assests/Scientific-News-Report-Sample-Insertion-Of-Pressure.pdf" class="btn btn-danger fw-bold" style="background:#d32f2f;">
-                                <i class="fa fa-file-pdf-o me-2"></i>View Sample
+                                <i class="fa fa-file-pdf me-2"></i>View Sample
                             </a>
                         </div>
                     </div>
@@ -231,7 +229,7 @@
                         </div>
                         <div class="col-md-4 col-12">
                             <a target="_blank" href="./assests/Scientific-News-Report-Sample-Spasm-Provocation.pdf" class="btn btn-danger fw-bold" style="background:#d32f2f;">
-                                <i class="fa fa-file-pdf-o me-2"></i>View Sample
+                                <i class="fa fa-file-pdf me-2"></i>View Sample
                             </a>
                         </div>
 
@@ -406,7 +404,7 @@
                         </div>
                         <div class="col-md-4 col-12">
                             <a target="_blank" href="./assests/Simplified-Abstracts-Sample-Spasm-Provocation.pdf" class="btn btn-danger fw-bold">
-                                <i class="fa fa-file-pdf-o me-2"></i>View Sample
+                                <i class="fa fa-file-pdf me-2"></i>View Sample
                             </a>
                         </div>
                     </div>
@@ -417,7 +415,7 @@
                         </div>
                         <div class="col-md-4 col-12">
                             <a target="_blank" href="./assests/Simplified-Abstracts-Sample-Insertion-Of-Pressure.pdf" class="btn btn-danger fw-bold">
-                                <i class="fa fa-file-pdf-o me-2"></i>View Sample
+                                <i class="fa fa-file-pdf me-2"></i>View Sample
                             </a>
                         </div>
 
