--- a/formatingandartwork.html
+++ b/formatingandartwork.html
@@ -64,9 +64,7 @@
                             <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Pricing</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
@@ -91,7 +89,7 @@
     <!-- Hero Section End -->
 
     <!-- Service Content Start -->
-    <div class="container py-5 wow fadeInUp" data-wow-delay="0.05s">
+    <div class="container py-5  wow fadeInUp formating-services" data-wow-delay="0.05s">
         <h2 class="text-center mb-6 wow fadeInLeft" data-wow-delay="0.1s">What's included?</h2>
         <div class="row g-4 mt-4">
             <!-- Manuscript Formatting Card -->
@@ -101,7 +99,7 @@
                         <div class="text-center mb-4">
                             <i class="fas fa-file-alt fa-3x text-danger"></i>
                         </div>
-                        <h5 class="card-title text-center">Manuscript Formatting</h5>
+                        <h4 class="card-title text-center">Manuscript Formatting</h4>
                         <p class="card-text">Propublicationhub will ensure that your text, figures, tables, & references are all formatted per the "instructions to author" guidelines. To ensure all your manuscript formatting concerns are taken care of, our journal specialists will always align your submission to guidelines, including heading style, font, & line spacing.</p>
                     </div>
                 </div>
@@ -114,7 +112,7 @@
                         <div class="text-center mb-4">
                             <i class="fas fa-image fa-3x text-danger"></i>
                         </div>
-                        <h5 class="card-title text-center">Artwork Editing</h5>
+                        <h4 class="card-title text-center">Artwork Editing</h4>
                         <p class="card-text">Propublicationhub's experienced artwork editors, equipped with the latest software, will check and address all technical aspects of your artwork, including resolution (DPI or PPI), color, image and file size, etc., to ensure adherence to journal requirements.</p>
                     </div>
                 </div>
@@ -127,7 +125,7 @@
                         <div class="text-center  mb-4">
                             <i class="fas fa-check-double fa-3x text-danger"></i>
                         </div>
-                        <h5 class="card-title text-center">Proofreading</h5>
+                        <h4 class="card-title text-center">Proofreading</h4>
                         <p class="card-text">Propublicationhub's expert editors will minutely examine your manuscript to iron out all the kinks that a novice just wouldn't catch. This will render your manuscript error-free!</p>
                     </div>
                 </div>
@@ -140,7 +138,7 @@
                         <div class="text-center mb-4">
                             <i class="fas fa-envelope fa-3x text-danger"></i>
                         </div>
-                        <h5 class="card-title text-center">Cover Letter</h5>
+                        <h4 class="card-title text-center">Cover Letter</h4>
                         <p class="card-text">Our journal experts and editors will be carefully crafting a cover letter that makes your research stand out from the competition. We will assist you in conveying the originality of your research in smooth, flowing prose that clearly displays the significance of your research & findings.</p>
                     </div>
                 </div>
@@ -148,12 +146,12 @@
         </div>
 
         <div class="row align-items-center mb-5 mt-5 border border-2 rounded wow fadeInLeft" data-wow-delay="0.35s">
-            <h4 class="text-danger align-items-center mb-4 mt-4 wow fadeInDown" data-wow-delay="0.4s">What's Not Included?</h4>
+            <h3 class="text-danger fw-bold align-items-center mb-4 mt-4  wow fadeInDown" data-wow-delay="0.4s">What's Not Included?</h3>
             <p class="mb-4 wow fadeInUp" data-wow-delay="0.45s">The following aspects are not checked under Manuscript Formatting Service and Artwork Editing. If you need these to be checked, please choose other editing services provided by us.</p>
-            <ul class="row">
+            <ul class="row px-5">
                 <li class="col-3 wow fadeInUp" data-wow-delay="0.5s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Word Count Reduction</span></li>
                 <li class="col-3 wow fadeInUp" data-wow-delay="0.55s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Academic Style</span></li>
-                <li class="col-3 wow fadeInUp" data-wow-delay="0.6s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Scientific nomenclature etc.</span></li>
+                <li class="col-3 wow fadeInUp" data-wow-delay="0.6s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Scientific nomenclature</span></li>
                 <li class="col-3 wow fadeInUp" data-wow-delay="0.65s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Parallelism</span></li>
                 <li class="col-3 wow fadeInUp" data-wow-delay="0.7s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Clarity and Readability</span></li>
                 <li class="col-3 wow fadeInUp" data-wow-delay="0.75s"><i class="fa fa-times text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Creating new figures</span></li>
@@ -185,7 +183,7 @@
     <!-- Service Content End -->
 
     <!-- Delivery And Pricing Start -->
-    <div class="container my-5 wow fadeInUp" data-wow-delay="1.35s">
+    <div class="container  wow fadeInUp" data-wow-delay="1.35s">
         <h2 class="fw-bold mb-2 wow fadeInLeft" style="color:#14213d;" data-wow-delay="1.4s">Delivery And Pricing</h2>
         <p class="mb-4 wow fadeInRight" style="font-size:1.08rem;" data-wow-delay="1.45s">Upload your manuscript now, and we'll get back to you within 2 business hours.</p>
         <div class="table-responsive wow fadeInUp" data-wow-delay="1.5s">
@@ -225,7 +223,7 @@
     <!-- Delivery And Pricing End -->
 
     <!-- FAQ Section Start -->
-    <div class="container my-5 wow fadeInUp" data-wow-delay="1.8s">
+    <div class="container my-5 wow fadeInUp" data-wow-delay="1s">
         <h2 class="fw-bold mb-4 wow fadeInLeft" style="color:#14213d;" data-wow-delay="1.85s">Frequently Asked Questions <span class="text-danger">{ FAQs }</span></h2>
         <div class="accordion faq-accordion w-100" id="faqAccordion">
             <div class="accordion-item mb-3 border-0 rounded-3 shadow-sm wow fadeInUp" data-wow-delay="1.9s">
@@ -260,7 +258,7 @@
     <!-- FAQ Section End -->
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer pt-5 wow fadeIn" data-wow-delay="2.0s">
+    <div class="container-fluid bg-dark text-white-50 footer pt-5 wow fadeIn" data-wow-delay="">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
