--- a/journal-selection.html
+++ b/journal-selection.html
@@ -60,9 +60,7 @@
                             <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="pricing.html">Pricing</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
@@ -91,7 +89,7 @@
         <p>Maximize your chances of publication by letting Propublicationhub match you with the most appropriate journals for your particular research and requirements. Our team of experts holds extensive experience in peer reviewing and editing for international journals in your field of study. Simply send us your criteria, and we will present you with the top 3-5 journals best suited to your manuscript and preferences. What's more: By using Propublicationhub's Journal Selection Service, you will get vital feedback for your manuscript, including suggestions on how to improve your paper.
         </p>
 
-        <div class="row align-items-center mb-5 mt-5">
+        <div class="row align-items-center mb-5 mt-5 pt-5">
             <div class="col-md-5 text-center mb-4 mb-md-0">
                 <img src="./img/short-list-img.png" alt="Journal Selection" class="img-fluid rounded" style="max-height:260px;">
             </div>
@@ -108,8 +106,8 @@
                 <a href="contact.html" class="btn btn-danger rounded-pill mt-2">Get Started</a>
             </div>
         </div>
-        <div class="container my-5">
-            <h2 class="fw-bold mb-4" style="color:#0a1831;">Advantages Of The Journal Selection Assistant Service</h2>
+        <div class="container my-5  ">
+            <h2 class="fw-bold mb-4 pt-5 mt-5" style="color:#0a1831;">Advantages Of The Journal Selection Assistant Service</h2>
             <ul class="list-unstyled mb-4">
                 <li class="d-flex align-items-start mb-3">
                     <i class="fa fa-check text-danger me-2 mt-1" style="font-size:1.2rem;"></i>
@@ -157,7 +155,7 @@
                 </li>
             </ul>
 
-            <h3 class="fw-bold mb-3 mt-5" style="color:#0a1831;">What Do You Get?</h3>
+            <h3 class="fw-bold mb-3 mt-5 pt-5"  style="color:#0a1831;">What Do You Get?</h3>
             <p class="mb-4">Propublicationhub will deliver Journal Selection Report that:</p>
             <ul class="list-unstyled">
                 <li class="d-flex align-items-start mb-3">
@@ -171,12 +169,12 @@
             </ul>
         </div>
     </div>
-    <!-- Service Content End --
-     <!-- Delivery And Pricing Start -->
-    <div class="container-fluid py-5">
+    <!-- Service Content End -->
+      <!-- Delivery And Pricing Start -->
+    <div class="container-fluid ">
         <div class="container">
             <div class=" mb-5">
-                <h2 class="mb-4">Delivery And Pricing</h2>
+                <h2 class="">Delivery And Pricing</h2>
                 <p>Upload your manuscript now, and we'll get back to you within 2 business hours.</p>
             </div>
             <div class="table-responsive">
