--- a/journalsubmission.html
+++ b/journalsubmission.html
@@ -60,9 +60,7 @@
                             <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Pricing</a>
-                    </li>
+                   
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
@@ -90,7 +88,7 @@
     <div class="container mt-5 wow fadeInUp" data-wow-delay="0.05s">
         <h3 class="mb-5 mt-5 wow fadeInLeft" data-wow-delay="0.1s">We'll Submit Your Paper for You</h3>
         <div class="row align-items-center p-5 rounded border mb-5 wow fadeInLeft" data-wow-delay="0.15s">
-            <h4 class="mb-5 text-center text-danger wow fadeInDown" data-wow-delay="0.2s">Our Journal Submission Process</h4>
+            <h4 class="mb-5 text-center fw-bold text-danger wow fadeInDown" data-wow-delay="0.2s">Our Journal Submission Process</h4>
             <div class="col-md-7">
                 <ul class="list-unstyled">
                     <li class="d-flex align-items-start mb-3 wow fadeInUp" data-wow-delay="0.25s"><i class="fa fa-check text-danger me-2 mt-1" style="font-size:1.2rem;"></i><span>Upon receiving payment, we will send a confirmation email with your assignment details</span></li>
@@ -198,7 +196,7 @@
     <!-- FAQ Section End -->
     
     <!-- Footer Start -->
-   <div class="container-fluid bg-dark text-white-50 footer  pt-5 wow fadeIn" data-wow-delay="1.6s">
+   <div class="container-fluid bg-dark text-white-50 footer  pt-5 wow fadeIn" data-wow-delay="">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
