--- a/palgarism-check.html
+++ b/palgarism-check.html
@@ -63,9 +63,7 @@
                             <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Pricing</a>
-                    </li>
+                   
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
@@ -136,7 +134,7 @@
         </div>
         <div class="row ">
             <div class="col-md-3 m-3   ">
-                <div class="shadow-sm p-4 rounded h-100 text-center">
+                <div class="shadow-sm p-4 approach-card rounded h-100 text-center">
                     <i class="fa fa-upload text-danger me-2 mt-1" style="font-size:1.2rem;"></i>
                     <h5 class="mb-3">Step 1</h5>
                     <p class="mb-0">You send your manuscript to Propublicationhub, selecting iThenticate.
@@ -145,14 +143,14 @@
                 </div>
             </div>
             <div class="col-md-3 m-3">
-                <div class="shadow-sm p-4 rounded h-100 text-center">
+                <div class="shadow-sm p-4 approach-card rounded h-100 text-center">
                     <i class="fa fa-search text-danger me-2 mt-1" style="font-size:1.2rem;"></i>
                     <h5 class="mb-3">Step 2</h5>
                     <p class="mb-0">We scan your manuscript for plagiarism using your preferred software.</p>
                 </div>
             </div>
             <div class="col-md-3 m-3">
-                <div class="shadow-sm p-4 rounded h-100 text-center">
+                <div class="shadow-sm p-4 approach-card rounded h-100 text-center">
                     <i class="fa fa-file-alt text-danger me-2 mt-1" style="font-size:1.2rem;"></i>
                     <h5 class="mb-3">Step 3</h5>
                     <p class="mb-0">You receive a report which highlights potential areas of plagiarism along with links to the original content.</p>
@@ -231,7 +229,7 @@
             <div class="">
                 <div class="accordion" id="faqAccordion">
                     <!-- FAQ Item 1 -->
-                    <div class="accordion-item border-0 mb-3 wow fadeInUp" data-wow-delay="1.15s">
+                    <div class="accordion-item border-0 mb-3 wow fadeInUp" data-wow-delay="0.5s">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button bg-danger text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 What file formats do you accept?
