--- a/revised-rejected-paper-editing.html
+++ b/revised-rejected-paper-editing.html
@@ -63,9 +63,7 @@
                             <li><a class="dropdown-item" href="./index.html">Abstract Analysis</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Pricing</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="contact.html">Contact</a>
                     </li>
@@ -81,7 +79,7 @@
         <div class="container pt-5">
             <div class="row g-5 pt-2">
                 <div class="col-lg-12 text-center">
-                    <h1 class="display-5 text-white wow fadeInDown" data-wow-delay="0.1s">Journal Submission</h1>
+                    <h1 class="display-5 text-white wow fadeInDown" data-wow-delay="0.1s">Revised & Rejected Paper Editing</h1>
                     <p class="text-white mb-4 wow fadeInUp" data-wow-delay="0.15s">Propublicationhub Publication Support offers a
                         tailored editing service to help you with research paper revision, manuscript re-submission, or
                         responding to reviewer comments. The Revised/Rejected Paper Editing service is for you if you
@@ -93,9 +91,9 @@
     <!-- Hero Section End -->
 
     <!-- Service Content Start -->
-    <div class="container py-5 wow fadeInUp" data-wow-delay="0.05s">
-        <div class="bg-white rounded shadow-sm p-4 wow fadeInUp" data-wow-delay="0.1s">
-            <h3 class="mb-4 text-center wow fadeInLeft" data-wow-delay="0.15s">Objectives</h3>
+    <div class="container py-5 wow fadeInUp " data-wow-delay="0.05s">
+        <div class="bg-white rounded service-container shadow-sm p-4 wow fadeInUp" data-wow-delay="0.1s">
+            <h3 class="mb-4 text-center fw-bold  wow fadeInLeft" data-wow-delay="0.15s">Objectives</h3>
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="bg-light p-4 rounded text-center">
@@ -114,40 +112,40 @@
     </div>
     <!-- Service Content End -->
     <!-- help section start -->
-    <div class="container align-items-center wow fadeInUp" data-wow-delay="0.3s">
+    <div class="container align-items-center wow fadeInUp " data-wow-delay="0.3s">
         <h3 class="align-items-center mb-4 wow fadeInLeft" data-wow-delay="0.35s">Here is how we help you with these situations and help you get published:</h3>
 
         <div class="bg-white rounded p-4 wow fadeInUp" data-wow-delay="0.4s">
             <div class="row align-items-stretch justify-content-center">
                 <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.45s">
-                    <div class="shadow-sm p-4 rounded h-100 text-center">
-                        <h5 class="">Two rounds of Substantive editing</h5>
+                    <div class="shadow-sm revised-card p-4 rounded h-100 text-center">
+                        <h5 class="fw-semibold">Two rounds of Substantive editing</h5>
                         <p class="mb-0">Two rounds of thorough editing by two subject experts to ensure that your revised paper has a logical flow and presentation along with complete language check and extensive revisions.</p>
                     </div>
                 </div>
                 <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="shadow-sm p-4 rounded h-100 text-center">
-                        <h5 class="">Addressing reviewer comments</h5>
+                    <div class="shadow-sm revised-card p-4 rounded h-100 text-center">
+                        <h5 class="fw-semibold">Addressing reviewer comments</h5>
                         <p class="mb-0">We ensure that reviewer's comments have been answered to in detail and satisfactorily.</p>
                     </div>
                 </div>
 
                 <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.55s">
-                    <div class="shadow-sm p-4 rounded h-100 text-center">
-                        <h5 class="">Revisions in line with the comments</h5>
+                    <div class="shadow-sm revised-card p-4 rounded h-100 text-center">
+                        <h5 class="fw-semibold">Revisions in line with the comments</h5>
                         <p class="mb-0">Our subject experts will ensure that your manuscript is extensively rewritten to meet the expectations of journal reviewers and address all the issues raised by the reviewers.</p>
                     </div>
                 </div>
                 <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.6s">
-                    <div class="shadow-sm p-4 rounded h-100 text-center">
-                        <h5 class="">Customized cover letter</h5>
+                    <div class="shadow-sm revised-card p-4 rounded h-100 text-center">
+                        <h5 class="fw-semibold">Customized cover letter</h5>
                         <p class="mb-0">We'll help you communicate the novelty of your research in a crisp, clean prose that demonstrates the importance of your findings.</p>
                     </div>
                 </div>
 
                 <div class="mb-4 wow fadeInUp" data-wow-delay="0.65s">
-                    <div class="shadow-sm p-4 rounded h-100 text-center">
-                        <h5 class="">Journal formatting</h5>
+                    <div class="shadow-sm revised-card p-4 rounded h-100 text-center">
+                        <h5 class="fw-semibold">Journal formatting</h5>
                         <p class="mb-0">We make sure that your text and references are all formatted per the "instructions to author" guidelines.</p>
                     </div>
                 </div>
@@ -242,8 +240,8 @@
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="1.45s">
         <div class="container">
             <div class="mb-5">
-                <h2 class="mb-4 wow fadeInLeft" data-wow-delay="1.5s">Delivery And Pricing</h2>
-                <p class="wow fadeInRight" data-wow-delay="1.55s">Upload your manuscript now, and we'll get back to you within 2 business hours.</p>
+                <h2 class="mb-4 wow fadeInLeft" data-wow-delay="1.0s">Delivery And Pricing</h2>
+                <p class="wow fadeInRight" data-wow-delay="0.05s">Upload your manuscript now, and we'll get back to you within 2 business hours.</p>
             </div>
             <div class="table-responsive wow fadeInUp" data-wow-delay="1.6s">
                 <table class="table table-bordered">
@@ -303,7 +301,7 @@
     <div class="container-fluid bg-dark text-white-50 footer  pt-5 wow fadeIn" >
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+                <div class="col-md-6 col-lg-6 wow fadeIn" data-wow-delay="">
                     <a href="index.html" class="d-inline-block mb-3">
                         <h3 class="text-white">PUBLICATIONHUB</h3>
                     </a>
